resource page banner alignemtn fix

--- a/wp-content/themes/ar-freight/scss/_inner-banner.scss
+++ b/wp-content/themes/ar-freight/scss/_inner-banner.scss
@@ -144,12 +144,16 @@
     }
     &__head-block {
         top:0 !important;
-        height: 70vh;
+        height: 60vh;
         display: flex;  
         align-items: center;       
     }
     &__title-block {
         width: 100%;
+        margin-top: 150px;
+        @media all and (max-width: 991px) {
+            margin-top: 60px;
+        }
     }
 }
 
